fix: reorganize spacing in the progress tracker

--- a/src/components/progressTracker/progressTracker.style.scss
+++ b/src/components/progressTracker/progressTracker.style.scss
@@ -2,7 +2,7 @@
 @use "../../style/mixins.scss" as mixin;
 
 .progress-tracker {
-  padding: 15px 16px;
+  padding: 15px 28px;
   display: flex;
   justify-content: center;
   align-items: center;
